--- a/music4all/src/app/cancion/cancion.component.html
+++ b/music4all/src/app/cancion/cancion.component.html
@@ -18,4 +18,10 @@
 <div> </div>
 </div>
 
-<div class="spinner">s</div>
+
+
+<p class="circle">
+  <span class="ouro">
+    <span class="left"><span class="anim"></span></span>
+    <span class="right"><span class="anim"></span></span>
+  </span>
