--- a/music4all/src/app/listado-canciones/listado-canciones.component.html
+++ b/music4all/src/app/listado-canciones/listado-canciones.component.html
@@ -1,18 +1,39 @@
 COMPONENTE LISTADO ZONA NAVEGABLE
 <h3>Lista de reproducción</h3>
 
-<ul>
-  <li *ngFor="let song of songs" 
+<app-cancion
+[songInput]="selectedSong">
+</app-cancion>
+
+<table>
+  <thead>
+    <tr>
+      <th>Track</th>
+      <th>Title</th>
+      <th>Time</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let song of songs" (click)="onSelect(song)" [class.selected]="song===selectedSong">
+      <td>{{song.track}}</td>
+      <td>{{song.title}}</td>
+      <td>{{song.time}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<!-- <ul>
+  <li *ngFor="let song of songs"
       (click)="onSelect(song)">
     {{song.track}} - {{song.title}} - {{song.time}}
   </li>
-</ul>
+</ul> -->
 
 <HR>
-<app-cancion 
+<app-cancion
 [songInput]="selectedSong">
 </app-cancion>
- 
+
 <!-- <div *ngIf="selectedSong">
   <div>
       <hr>
@@ -26,7 +47,7 @@ COMPONENTE LISTADO ZONA NAVEGABLE
     <li>Duration: {{selectedSong.time}}</li>
     <li>Year: {{selectedSong.year}}</li>
     </ul>
-  </div> 
+  </div>
 <hr> -->
 
 
