--- a/music4all/src/app/listado-canciones/listado-canciones.component.html
+++ b/music4all/src/app/listado-canciones/listado-canciones.component.html
@@ -1,14 +1,15 @@
-COMPONENTE LISTADO ZONA NAVEGABLE
-<h3>Lista de reproducción</h3>
-
 <app-cancion
 [songInput]="selectedSong">
 </app-cancion>
+
+COMPONENTE LISTADO ZONA NAVEGABLE
+<h3>Lista de reproducción</h3>
 
 <table>
   <thead>
     <tr>
       <th>Track</th>
+      <th></th>
       <th>Title</th>
       <th>Time</th>
     </tr>
@@ -16,6 +17,7 @@ COMPONENTE LISTADO ZONA NAVEGABLE
   <tbody>
     <tr *ngFor="let song of songs" (click)="onSelect(song)" [class.selected]="song===selectedSong">
       <td>{{song.track}}</td>
+      <td ><img src={{song.thumbnails}} class="thumb"></td>
       <td>{{song.title}}</td>
       <td>{{song.time}}</td>
     </tr>
@@ -29,10 +31,10 @@ COMPONENTE LISTADO ZONA NAVEGABLE
   </li>
 </ul> -->
 
-<HR>
+<!-- <HR>
 <app-cancion
 [songInput]="selectedSong">
-</app-cancion>
+</app-cancion> -->
 
 <!-- <div *ngIf="selectedSong">
   <div>
