--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <h1>{{title}}</h1>
 <hr>
-<app-listado-canciones></app-listado-canciones>
+<app-cancion
+*ngIf="cancionSeleccionada"
+[songInput]="cancionSeleccionada">
+</app-cancion>
+
+<app-listado-canciones (cancionSeleccionada)="mostrarDetalles($event)"></app-listado-canciones>
 
 
+<!-- <app-listado-canciones (cancionSeleccionada)="onSelect($event)"></app-listado-canciones> -->
