interfaz reproductor listo para v2.1

--- a/src/app/components/reproductor/reproductor.component.html
+++ b/src/app/components/reproductor/reproductor.component.html
@@ -1,1 +1,37 @@
-<audio autoplay controls></audio>
+<div class="reproductor-container">
+
+    <!-- Controles -->
+    <div class="controls">
+        <button>
+         <i class="fa prev">&#xf048;</i>
+       </button>
+
+        <button>
+         <i class="fa stop">&#xf28e;</i>
+       </button>
+
+        <button>
+         <i class="fa play">&#xf01d;</i>
+       </button>
+
+        <button>
+         <i class="fa pause">&#xf28c;</i>
+       </button>
+
+        <button>
+         <i class="fa next">&#xf051;</i>
+       </button>
+    </div>
+
+    <!-- Time slider -->
+    <div class="time">
+
+        <div class="time-controls">
+            <span>00:00</span>
+            <input type="range" class="time-slider" min="0" max="100" step="1" value="0">
+            <span>00:00</span>
+        </div>
+
+    </div>
+
+</div>
