--- a/src/app/listado-canciones/listado-canciones.component.html
+++ b/src/app/listado-canciones/listado-canciones.component.html
@@ -3,15 +3,8 @@
 <h3>Realiza tu búsqueda:</h3>
 
 <input
-type="text"
-name="filtroGrupo"
-class="busqueda"
-placeholder="Busca..."
-[(ngModel)]="cancionFiltrada"
+type="text" name="filtroGrupo" class="busqueda" placeholder="Busca..." [(ngModel)]="cancionFiltrada"
 />
-
-
-
 
 COMPONENTE LISTADO ZONA NAVEGABLE
 <h3>Lista de reproducción</h3>
@@ -26,7 +19,7 @@ COMPONENTE LISTADO ZONA NAVEGABLE
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let song of songs | filtro: cancionFiltrada" (click)="onSelect(song)" [class.selected]="song===selectedSong">
+    <tr *ngFor="let song of songs | filtro: cancionFiltrada" (click)="onSelect(song)" >
       <td>{{song.track}}</td>
       <td ><img src={{song.thumbnails}} class="thumb"></td>
       <td>{{song.title}}</td>
