--- a/src/app/reproductor/reproductor.component.html
+++ b/src/app/reproductor/reproductor.component.html
@@ -1,1 +1,14 @@
-<p>reproductor works!</p>
+<!-- Interfaz del reproductor -->
+
+<div>
+  <!-- Controles/Botones-->
+
+  <!--Play-->
+  <button><i class="far fa-play-circle"></i></button>
+
+  <!--Pause-->
+  <button><i class="far fa-pause-circle"></i></button>
+
+  <!--stop-->
+  <button><i class="far fa-stop-circle"></i></button>
+</div>
