--- a/src/app/reproductor/reproductor.component.html
+++ b/src/app/reproductor/reproductor.component.html
@@ -1,6 +1,6 @@
 <!-- Interfaz del reproductor -->
 
-<div>
+<div class="controles">
   <!-- Controles/Botones-->
 
   <!--Play-->
@@ -12,3 +12,20 @@
   <!--stop-->
   <button><i class="far fa-stop-circle"></i></button>
 </div>
+  <!--Barra de progreso-->
+
+  <div class="tiempo">
+      <strong><span>Tiempo transcurrido</span></strong>
+  </div>
+  <div class="tiempo_cancion">
+      <strong><span>0:00</span></strong>
+  </div>
+
+  <div class="tiempo">
+    <strong><span>Tiempo total</span></strong>
+  </div>
+  <div class="tiempo_cancion">
+    <strong><span>0:00</span></strong>
+  </div>
+
+
