--- a/src/app/reproductor/reproductor.component.html
+++ b/src/app/reproductor/reproductor.component.html
@@ -14,6 +14,7 @@
 </div>
   <!--Barra de progreso-->
 
+  <!--Tiempo transcurrido-->
   <div class="tiempo">
       <strong><span>Tiempo transcurrido</span></strong>
   </div>
@@ -21,6 +22,8 @@
       <strong><span>0:00</span></strong>
   </div>
 
+
+  <!--Tiempo total-->
   <div class="tiempo">
     <strong><span>Tiempo total</span></strong>
   </div>
