--- a/src/app/reproductor/reproductor.component.html
+++ b/src/app/reproductor/reproductor.component.html
@@ -1,3 +1,4 @@
+<div class="contenedor-rep">
 <!-- Interfaz del reproductor -->
 
 <div class="controles">
@@ -12,23 +13,16 @@
   <!--stop-->
   <button><i class="far fa-stop-circle"></i></button>
 </div>
-  <!--Barra de progreso-->
 
-  <!--Tiempo transcurrido-->
-  <div class="tiempo">
-      <strong><span>Tiempo transcurrido</span></strong>
-  </div>
+
+  <!--Barra de progreso-->
   <div class="tiempo_cancion">
+      <!--Tiempo transcurrido-->
+      <strong><span>0:00</span></strong>
+      <!--Barra prograsiva de reproducción-->
+      <input type="range" class="barraprogreso" value="0">
+      <!--Tiempo total-->
       <strong><span>0:00</span></strong>
   </div>
-
-
-  <!--Tiempo total-->
-  <div class="tiempo">
-    <strong><span>Tiempo total</span></strong>
-  </div>
-  <div class="tiempo_cancion">
-    <strong><span>0:00</span></strong>
-  </div>
-
+</div>
 
