--- a/src/app/components/listado-canciones/listado-canciones.component.css
+++ b/src/app/components/listado-canciones/listado-canciones.component.css
@@ -40,3 +40,27 @@ img.thumb{
 li {
   cursor: pointer;
 }
+
+.formulario{
+  display: inline-block;
+}
+
+h3 {
+  float: left;
+}
+
+form {
+  float: right;
+
+}
+
+input {
+  margin-top: 2%;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  width: 20em;
+  padding: 0.8rem;
+  border-radius: 5em;
+  border: 1px solid #39c;
+}
