--- a/src/app/components/reproductor/reproductor.component.css
+++ b/src/app/components/reproductor/reproductor.component.css
@@ -1,19 +1,35 @@
 i {
- font-size: 1.5rem;
-}
+  display: inline-block;
+  margin: 12px;
+  font-size: 40px;
+ }
 
-button {
+
+
+ button {
   border-color: transparent;
+  background-color: transparent;
 }
 
-.reproductor-container {
-  background-color: rgb(235, 235, 235);
-  padding: 15px;
+.contenedor-rep {
+  margin: auto;
+  width: 100%;
+  /* max-width: 500px;
+  max-height: 900px; */
+  background: linear-gradient(10deg, rgba(255, 255, 255, 0.486) 9%, #1f62be 96%) center center, #2A80F8 ;
+  padding: 30px;
+  border: 1px solid rgba(0,0,0,0.2);
+  /* border-radius: 5em; */
+  font-weight: bold;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
 }
 
-.time-slider {
-  width: 20rem;
+
+.barraprogreso {
+  width: 300px;
 }
+
+
