--- a/src/app/components/reproductor/reproductor.component.html
+++ b/src/app/components/reproductor/reproductor.component.html
@@ -19,8 +19,7 @@
         min="0" 
         [max]="state?.duration" 
         step="1" 
-        [value]="state?.currentTime" 
-        >
+        [value]="state?.currentTime">
   {{ state?.readableDuration }}
 
 </div>
