button and slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <!-- Logo -->
 <h1>{{title}}</h1>
+<button mat-raised-button color="warn" href="https://www.google.com/" target="_blank">Google</button>
+<a mat-button color="primary" href="https://www.google.com/" target="_blank">Google</a>
+
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
 
 <hr>
 
