--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -1,15 +1,21 @@
-<div *ngIf="song_" class="detalleCancion">
+<div *ngIf="song_" class="detalleCancion" #i>
   <span><img src={{song_.thumbnails}}></span>
   <span>
-    <ul>
-      <li>Song: <q>{{song_.title | uppercase}}</q>
-          <br>
-          <i>{{song_.composer}}</i>
-          <br> by {{song_.performer}}</li>
+    <!-- Hide  -->
+  <button (click)="song_ = 0" class="hidebtn"><i> Hide details</i>
+  </button>
+  <mat-list role="list">
+    
+      <mat-list-item role="listitem"><q>{{song_.title | uppercase}}</q></mat-list-item>
+      <mat-list-item role="listitem"><i>{{song_.composer}}</i></mat-list-item>
+      <mat-list-item role="listitem">by {{song_.performer}}</mat-list-item>
       <hr>
-      <li>Style: {{song_.style}}</li>
-      <li>Duration: {{song_.time}}</li>
-      <li>Year: {{song_.year}}</li>
-    </ul>
+      <mat-list-item role="listitem">Style: {{song_.style}}</mat-list-item>
+      <mat-list-item role="listitem">Duration: {{song_.time}}</mat-list-item>
+      <mat-list-item role="listitem">Year: {{song_.year}}</mat-list-item>
+    
+    </mat-list>
   </span>
+ 
+  
 </div>
