--- a/src/app/components/cancion/cancion.component.css
+++ b/src/app/components/cancion/cancion.component.css
@@ -1,3 +1,11 @@
+.hidebtn {
+ cursor: pointer;
+}
+
+img {
+  width: 50%;
+}
+
 div.detalleCancion{
   width: 100%;
   border-bottom: 2px solid #ddd;
@@ -6,3 +14,4 @@ span{
   display: inline-block;
   width: 50%;
 }
+
