--- a/src/app/components/listado-canciones/listado-canciones.component.css
+++ b/src/app/components/listado-canciones/listado-canciones.component.css
@@ -1,66 +1,104 @@
 table {
-  border-collapse: collapse;
-  width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
+
+/* 
 table thead {
   color: #fff;
   background-color: rgb(42, 128, 248);
+} */
+
+th,
+td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
-th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
 
-tbody tr:hover {
+/* tbody tr:hover {
   background-color:rgba(157, 172, 250, 0.533);
-  /* color: white; */
+  color: white;
   cursor: pointer;
-}
+} */
 
-tbody tr.selected {
+
+/* tbody tr.selected {
   background-color: #3412bbDC;
   color: white;
-}
+} */
 
-tbody tr.selected:hover {
+
+/* tbody tr.selected:hover {
   background-color: #3412bbDC;
   color: gray;
+} */
+
+img.thumb {
+    height: 50px;
+    width: 50px;
 }
 
 
-
-img.thumb{
-  height: 50px;
-  width: 50px;
-}
-
+/* 
 li {
   cursor: pointer;
-}
+} */
 
-.formulario{
-  display: inline-block;
+.formulario {
+    display: inline-block;
 }
 
 h3 {
-  float: left;
+    float: left;
 }
 
-form {
-  float: right;
-
+.form {
+    margin-left: 3vw;
 }
 
 input {
-  margin-top: 2%;
-  -webkit-appearance: none;
-  appearance: none;
-  position: relative;
-  width: 20em;
-  padding: 0.8rem;
-  border-radius: 5em;
-  border: 1px solid #39c;
+    margin-top: 2%;
+    margin-left: 30px;
+    -webkit-appearance: none;
+    /* appearance: none; */
+    position: relative;
+    width: 20em;
+    padding: 0.8rem;
+    /* border-radius: 5em;
+  border: 1px solid #39c; */
+}
+
+.headerlist {
+    color: #fff;
+    background-color: #9C27B0;
+}
+
+.list-item {
+    display: grid;
+    grid-template-columns: 10% 20% 50% 100%;
+}
+
+.hovered:hover {
+    background-color: rgba(157, 172, 250, 0.533);
+}
+
+.item {
+    border-bottom: 1px solid #ddd;
+    cursor: pointer;
+}
+
+.track {
+    margin-left: 2rem;
+    margin-top: 1rem;
+}
+
+.text {
+    margin-top: 1.2rem;
+}
+
+.thumb {
+    margin-top: 0.2rem;
 }
