--- a/src/app/components/reproductor/reproductor.component.css
+++ b/src/app/components/reproductor/reproductor.component.css
@@ -20,7 +20,7 @@ i {
   width: 100%;
   /* max-width: 500px;
   max-height: 900px; */
-  background: linear-gradient(10deg, rgba(255, 255, 255, 0.486) 9%, #1f62be 96%) center center, #2A80F8 ;
+  background: linear-gradient(10deg, rgba(255, 255, 255, 0.178) 9%, #69E9F5 96%) center center, #2A80F8 ;
   padding: 30px;
   border: 1px solid rgba(0,0,0,0.2);
   /* border-radius: 5em; */
