--- a/src/app/components/cancion/cancion.component.css
+++ b/src/app/components/cancion/cancion.component.css
@@ -1,17 +1,25 @@
-.hidebtn {
+.container {
+  width: 100vw;
+  height: auto;
+}
+
+button {
  cursor: pointer;
+ margin-left: 17rem;
+ margin-bottom: 10px;
 }
 
-img {
-  width: 50%;
-}
-
-div.detalleCancion{
-  width: 100%;
+.detalleCancion{
+  /* width: 100%;
+  height: auto; */
   border-bottom: 2px solid #ddd;
+  background-color: rgb(231, 231, 231);
 }
 span{
-  display: inline-block;
-  width: 50%;
+  max-width: 100vw;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: baseline;
 }
 
