para tag 3.3 material: buttons y favicon

--- a/src/app/components/cancion/cancion.component.css
+++ b/src/app/components/cancion/cancion.component.css
@@ -3,9 +3,9 @@
   height: auto;
 }
 
-button {
+.hidebtn {
  cursor: pointer;
- margin-left: 17rem;
+ margin-left: 17rem !important;
  margin-bottom: 10px;
 }
 
