--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -2,7 +2,7 @@
   
     <!-- Hide  -->
   <mat-card-actions>
-    <button (click)="song_ = 0" class="hidebtn"><i> Hide details</i></button>
+    <button mat-stroked-button color="primary" (click)="song_ = 0" class="hidebtn"><i> Hide details</i></button>
   </mat-card-actions>
   
   <span>
