--- a/src/app/components/listado-canciones/listado-canciones.component.html
+++ b/src/app/components/listado-canciones/listado-canciones.component.html
@@ -1,19 +1,19 @@
-<!-- <h3>Lista de reproducción</h3> -->
 <br>
 <!-- Filtro -->
 <mat-form-field class="form">
-  
+
   <mat-label><strong>Realiza tu búsqueda&nbsp;&nbsp;</strong></mat-label>
-  <input matInput type="text" 
-         name="input" 
-         class="busqueda" 
-         placeholder="Título o artista..." 
+  <input matInput type="text"
+         name="input"
+         class="busqueda"
+         placeholder="Título o artista..."
          [(ngModel)]="cancionFiltrada"/>
 </mat-form-field>
 
+
+<!-- Lista de reproducción -->
 <table mat-table  class="list">
 
-   
   <mat-list>
     <tr class="list-item headerlist">
       <th>Track</th>
@@ -21,14 +21,14 @@
       <th>Title</th>
       <th>Time</th>
     </tr>
-  
+
   <mat-selection-list [multiple]="false" *ngFor="let song of songs | filtro: cancionFiltrada;
-        let i = index" 
-        (click)="onOpenFile(song, i)" 
+        let i = index"
+        (click)="onOpenFile(song, i)"
         (click)="onSelect(song)">
-  
+
       <div class="list-item hovered">
-    
+
         <div class="item track">{{song.track}}</div>
         <div class="item thumb"><img src={{song.thumbnails}} class="thumb"></div>
         <div class="item text">{{song.title}}</div>
@@ -37,8 +37,7 @@
       </div>
 
   </mat-selection-list>
+
   </mat-list>
 
-
-  
 </table>
