--- a/src/app/components/listado-canciones/listado-canciones.component.html
+++ b/src/app/components/listado-canciones/listado-canciones.component.html
@@ -17,6 +17,7 @@
   <mat-list>
     <tr class="list-item headerlist">
       <th>Track</th>
+      <th></th>
       <th>Artista</th>
       <th>Title</th>
       <th>Time</th>
@@ -31,6 +32,7 @@
 
         <div class="item track">{{song.track}}</div>
         <div class="item thumb"><img src={{song.thumbnails}} class="thumb"></div>
+        <div class="item text">{{song.performer}}</div>
         <div class="item text">{{song.title}}</div>
         <div class="item text">{{song.time}}</div>
 
