recoge y muestra desde firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <img class="logo" src="./assets/logo/logo_header.png" alt="">
 </div>
 
+<router-outlet></router-outlet>
 
 <!-- Componente canción -->
 <app-cancion *ngIf="cancionSeleccionada" [songInput]="cancionSeleccionada">
