--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,5 @@
 <!-- Componente listado -->
 <app-listado-canciones (cancionSeleccionada)="mostrarDetalles($event)">
 </app-listado-canciones>
+
+<app-testdb></app-testdb>
