--- a/src/app/components/cancion/cancion.component.css
+++ b/src/app/components/cancion/cancion.component.css
@@ -9,6 +9,12 @@
  margin-bottom: 10px;
 }
 
+.detail-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .detalleCancion{
   /* width: 100%;
   height: auto; */
@@ -23,3 +29,7 @@ span{
   justify-content: baseline;
 }
 
+.inputs {
+  display: flex;
+  flex-direction: column;
+}
